# stm32

./: .gitignore
Blink_blink/src/: main.c
adc_driver/: core.s  linker.ld  makefile
adc_driver/src/: adc_drive.c  adc_drive.h  core.h  main.c
button_input/: platformio.ini
button_input/src/: main.c
external_led/src/: main.c
introduction/asm/1/: Readme  core.s  linker.ld
introduction/asm/2/: linker.ld
introduction/led_blink/src/: main.c
introduction/struct/src/: main.c
lib/: Readme  makefile
lib/src/: GPIO.c  GPIO.h  core.c  core.h  i2c_driver.c  i2c_driver.h  main.c
lib/src/oled/: oled_i2c.h
rust/: Cargo.toml  memory.x  readme
rust/src/: app.rs  main.rs
rust_emb/: Cargo.toml
