[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embedded-hal = "1.0.0"
panic-halt = "0.2.0"
usb-device = "0.3.2"
usbd-human-interface-device = "0.5.0"
usbd-serial = "0.2.2"
rtt-target = {version = "0.3.1", features=["cortex-m"]}

[dependencies.stm32f4xx-hal]
version = "0.21.0"
features = ["stm32f411",'usb_fs',"otg-fs"]
